# AOC

./: .gitignore  AOC.cabal  LICENSE  README.md
aoc2023/: day01.hs  day02.hs  day04.hs  day07.hs  day11.hs  day15.hs  day18.hs  day19.hs
aoc2023/day01/: Main.hs
app/: Main.hs
src/: AOC.hs
src/AOC/: AOC2023.hs
src/AOC/AOC2023/: Day1.hs  Day2.hs  Day3.hs
