cabal-version:      2.4
name:               AOC
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Nguyen Son Linh
maintainer:         linhns59@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
  CHANGELOG.md
  README.md

library
  exposed-modules:
    AOC
    AOC.AOC2023.Day1
    AOC.AOC2023.Day2
    AOC.AOC2023.Day3

  -- Modules included in this library but not exported.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base        ^>=4.17.2.0
    , regex-tdfa  ^>=1.3.2
    , matrix      ^>=0.3.6.3

  hs-source-dirs:   src
  default-language: Haskell2010

executable AOC
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , AOC
    , base  ^>=4.17.2.0

  hs-source-dirs:   app
  default-language: Haskell2010

test-suite AOC-test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          AOCTest.hs
  build-depends:    base ^>=4.17.2.0
