cabal-version:      2.4
name:               AOC
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Nguyen Son Linh
maintainer:         linhns59@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
  CHANGELOG.md
  README.md

common common-extensions
  default-extensions:
    OverloadedStrings
    PartialTypeSignatures
    RecordWildCards

common build-directives
  build-depends:    base
  default-language: Haskell2010
  hs-source-dirs:   . app src
  other-modules:    AOC
  ghc-options:      -O2 -Wall -threaded -rtsopts -with-rtsopts=-N

library
  import:           common-extensions
  exposed-modules:  AOC

  -- Modules included in this library but not exported.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:    base
  hs-source-dirs:   . app src
  default-language: Haskell2010

executable AOC
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:    base ^>=4.17.2.0
  hs-source-dirs:   app src
  default-language: Haskell2010

executable day01-2023
  import:  common-extensions, build-directives
  main-is: aoc2023/day01.hs

executable day07-2023
  import:        common-extensions, build-directives
  main-is:       aoc2023/day07.hs
  build-depends:
    , attoparsec
    , text

executable day02-2023
  import:        common-extensions, build-directives
  main-is:       aoc2023/day02.hs
  build-depends: regex-tdfa

executable day11-2023
  import:        common-extensions, build-directives
  main-is:       aoc2023/day11.hs
  build-depends:
    , containers
    , text

executable day15-2023
  import:        common-extensions, build-directives
  main-is:       aoc2023/day15.hs
  build-depends:
    , containers
    , text
    , attoparsec

test-suite AOC-test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          AOCTest.hs
  build-depends:    base ^>=4.17.2.0
